Split into two components, logic moved to a service

--- a/src/app/components/password-input/password-input.component.scss
+++ b/src/app/components/password-input/password-input.component.scss
@@ -1,4 +1,4 @@
-.password-strength {
+.password {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -9,16 +9,5 @@
         line-height: 32px;
         border-radius: 7px;
         border: 1px solid #000;
-    }
-}
-
-.strength-indicator {
-    display: flex;
-    gap: 20px;
-    margin-top: 25px;
-
-    &__section {
-        width: 70px;
-        height: 40px;
     }
 }
