--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
 <main class="main">
-  <app-password-strength>
-    
-  </app-password-strength>
+  <app-password-input></app-password-input>
 </main>
